--- a/exercises/ex3/css/style.css
+++ b/exercises/ex3/css/style.css
@@ -13,61 +13,69 @@ header, main, footer, nav, section, div, aside{
     background-color: #e6e6e6;
 }
 
-
 body{
-    display: block;
-    background-image: url(../images/Untitled.png) repeat-x;
+    background: url(../images/background.png) repeat-x;
 }
 header{
     padding-top: 0px;
     width: 100%;
-    height: 60px;
+    height: 99px;
     background-color: #444444;
     padding-top: 1px;
 }
 header a{
     display: block;
-    background-image: url(../images/unnamed.jpg)  no-repeat;
-    width: 50px;
-    height: 50px;
-    margin: 2px auto; 
+    background: url(../images/circle.png)  no-repeat;
+    background-size: contain;
+    width: 60px;
+    height: 60px;
+    margin: 16px auto; 
 }
 
 
-#navsecondfage{
-    height: 120px;
+ul{
+    list-style: none;
+    position: relative;
+}
+#navfirstpage{
+    border-left: 3px solid black;
+    width: 178px;
+    text-align: center;
+}
+
+#navfirstpage li{
+    position: relative;
+    margin: auto;
+    padding-top: 180px;
+}
+
+#navsecondpage{
+    height: 180px;
     background-color: #d0b5b5;
 }
-#navsecondfage ul{
-    list-style: none;
-    position: absolute;
-}
-#navsecondfage li{
+#navsecondpage li{
     float: left;
     position: relative;
-    margin-top: 50px;
-    margin-left: 100px;
+    margin-top: 80px;
+    margin-left: 135px;
 }
 aside{
     border-right: 3px solid black;
-    width: 120px;
+    width: 160px;
 }
 
-
-#navfirstpage{
-    border-left: 3px solid black;
+#navThirdPg{
+    height: 165px;
+    background: url(../images/navBackground.png) repeat-x;
 }
-#navfirstpage ul{
-    list-style: none;
-    position: absolute;
+#navThirdPg ul{
+    text-align: center;
 }
-#navfirstpage li{
-    position: relative;
-    top: 40px;
-    left: 70px;
-    margin-top: 60px;
+#navThirdPg li{
+    display: inline;
+    line-height: 150px;
+    margin: 0px 90px;
 }
-
 ul a{
     text-decoration: none;
     font-family:"verdana";
@@ -84,10 +92,24 @@ ul a:active{
     text-decoration: underline;
 }
 
-
+#lay2Main{
+    width: 100%;
+    background-color: #e6e6e6;
+}
+.flexMain2{
+    display: flex;
+    flex-wrap: wrap;
+}
+#lay2Main article{
+    margin: 50px 95px;
+    height: 310px;
+    width: 215px;
+    background-color: #fefefe;
+    border: 1px solid #a3a3a3;
+}
 main{
-    height: 800px;
-    width: 800px;
+    height: 830px;
+    width: 810px;
     position: relative;
 }
 main > article {
@@ -98,53 +120,72 @@ main > article {
 
 #page2Rec1{
     width: 260px;
-    height: 100px;
-    left: 70px;
-    top: 490px;
+    height: 110px;
+    left: 60px;
+    top: 415px;
 }
 #page2Rec2{
-    width: 400px;
-    height: 290px;
+    width: 410px;
+    height: 285px;
     left: 350px;
-    top: 300px;
+    top: 240px;
 }
 #page2Rec3{
     width: 130px;
     height: 90px;
-    left: 440px;
-    top: 60px;
+    left: 465px;
+    top: 75px;
 }
 #page2Rec4{
     width: 130px;
     height: 90px;
-    left: 620px;
-    top: 60px;
+    left: 630px;
+    top: 75px;
 }
 
 
 .rectangle1{
-    width: 180px;
-    height: 305px;
-    left: 10px;
-    top: 50px;
+    width: 170px;
+    height: 300px;
+    left: 30px;
+    top: 90px;
 }
 .rectangle2{
-    width: 180px;
-    height: 305px;
-    left: 340px;
-    top: 410px;
+    width: 170px;
+    height: 300px;
+    left: 275px;
+    top: 440px;
 }
 .rectangle3{
-    width: 340px;
-    height: 240px;
-    left: 400px;
-    top: 10px;
+    width: 400px;
+    height: 280px;
+    left: 350px;
+    top: 20px;
 }
-
 
 
 footer{
     width: 100%;
-    height: 35px;
+    height: 72px;
     background-color: #444444;
+    
+}
+.fixedFooter{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+}
+
+
+@media(max-width: 1200px){
+    #wrapper{
+        width: 570px;
+    }
+    footer{
+        width: 570px;
+        margin: auto;
+    }
+    #navThirdPg li{
+        margin: 0px 50px;
+    }
 }
