--- a/exercises/ex3/css/style.css
+++ b/exercises/ex3/css/style.css
@@ -14,7 +14,7 @@ header, main, footer, nav, section, div, aside{
 }
 
 body{
-    background: url(../images/background.png) repeat-x;
+    background: url(../images/backgrou.png) repeat-x;
 }
 header{
     padding-top: 0px;
@@ -111,7 +111,7 @@ ul a:active{
 
 #lay2Main{
     width: 100%;
-    height: 675px;
+    height: auto;
     background-color: #e6e6e6;
     overflow: hidden;
 }
@@ -244,6 +244,9 @@ footer{
         position: relative;
         left: 250px;
     }  
+    body{
+        background: url(../images/backgrou.png) repeat;
+    }
 }
 
 
