--- a/exercises/ex4/css/style.css
+++ b/exercises/ex4/css/style.css
@@ -49,7 +49,7 @@ section.svg{
     /*formWrapper*/
 .wrapper{
     width: 800px;
-    margin: 0px auto;
+    margin: 0px 550px;
 }
 
     /*rangeSelection*/
