--- a/exercises/finalprojectWeb/LOOK-project/outfits/templates/outfits/findstylist.html
+++ b/exercises/finalprojectWeb/LOOK-project/outfits/templates/outfits/findstylist.html
@@ -38,6 +38,9 @@
                         <a class="nav-link" href="{% url 'stylist' %}" id="selected">Find stylist</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'buildLook' %}" >Build look</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'profile' %}">Profile</a>
                     </li>
                     <li class="nav-item">
