--- a/exercises/finalprojectWeb/LOOK-project/outfits/static/outfits/css/style.css
+++ b/exercises/finalprojectWeb/LOOK-project/outfits/static/outfits/css/style.css
@@ -18,45 +18,6 @@ body, nav, main, div, header, footer, article, section, aside, a {
 
 
 
-
-/*********** hamburger ******************************/
-
-
-
-/**************************************/
-
-
-/******  Register  ********/
-
-
-/* .Register main{
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.Register form{
-    width: 70%;
-    margin: 0px auto;
-}
-.Register main{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
-}
-.Register img{
-    height: 212px;
-    width: 370px;
-    margin-bottom: 15px;
-} */
-
-/******  Register  ********/
-
-
-
-
-
 /******  browse look  ********/
 .Browselook .Browsecontent{
     width: 100%; 
@@ -102,11 +63,10 @@ body, nav, main, div, header, footer, article, section, aside, a {
     position: relative;
     border-radius: 5px;
     margin: 5px;
-    /* box-shadow: 0px 0px 0px 3px rgba(19, 18, 18, 0.3); */
+   
 }
 
 .stylisttbutton button{
-    /* position: absolute; */
     padding-top: 2px;
     padding-bottom: 2px;
     padding-left: 7px;
@@ -119,17 +79,7 @@ body, nav, main, div, header, footer, article, section, aside, a {
     left: 110px;
     top: 194px;
 }
-/* .Browselook #heart{
-    position: absolute;
-    margin: 15px;
-    height: 20px;
-    width: 20px;
-} */
 
-
-/* .BrowsecontentImg{
-    background-color: rgb(230, 222, 222);
-} */
 
 .Browselook .contentImg img{
     margin-top: 5px;
@@ -211,7 +161,7 @@ body, nav, main, div, header, footer, article, section, aside, a {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    /* background-color:rgb(245, 245, 245);      */
+    
 } 
 
 .stylistCreate .objects
@@ -275,11 +225,7 @@ header {                                /* for all 'a' tags to be next to each o
     background-color: #C4C4C4;
     margin: 0px auto;
 }
-/* #logout{
-    position: absolute;
-    right: 660px;
 
-} */
 #logo {
     width: 104px;
     height: 49px;
@@ -383,10 +329,7 @@ footer nav{
 }
 
 footer nav li{
-    /* margin-top: 25px;
-    margin-bottom: 25px;
-    margin-left: 30px;
-    margin-right: 30px; */
+    
     margin: 25px;
     width:32px;
     height:32px;
@@ -540,13 +483,7 @@ footer nav li{
     opacity: 0.7;
 }
 
-/* .overlay a{
-position: absolute;
-font-size: 19px;
-color: white;
-text-decoration: none;
-opacity: 1.0;
-} */
+
 
 .overlay button{
     position: absolute;
@@ -562,11 +499,13 @@ opacity: 1.0;
 }
 
 #delete {
+    z-index: 9999;
     top: 10px;
     right: 10px;
 }
 
 #add {
+    z-index: 9999;
     bottom: 40px;
     left: 35px;
 }
