--- a/exercises/finalprojectWeb/LOOK-project/outfits/templates/outfits/browseLook.html
+++ b/exercises/finalprojectWeb/LOOK-project/outfits/templates/outfits/browseLook.html
@@ -37,6 +37,9 @@
                         <a class="nav-link" href="{% url 'stylist' %}" >Find stylist</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'buildLook' %}" >Build look</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'profile' %}">Profile</a>
                     </li>
                     <li class="nav-item">
