--- a/exercises/finalprojectWeb/LOOK-project/outfits/templates/outfits/stylistCreateInside.html
+++ b/exercises/finalprojectWeb/LOOK-project/outfits/templates/outfits/stylistCreateInside.html
@@ -29,9 +29,11 @@
 				<li class="nav-item">
 					<a class="nav-link active" href="{% url 'home' %}">Home</a>
 				</li>
-
 				<li class="nav-item">
-					<a class="nav-link" id="selected" href="{% url 'buildLook' %}">Build LOOKS</a>
+					<a class="nav-link" href="{% url 'stylist' %}">Find stylist</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="{% url 'buildLook' %}" id="selected" >Build look</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="{% url 'profile' %}">Profile</a>
